[gd_scene load_steps=7 format=3 uid="uid://dxxfxtux0mdrk"]

[ext_resource type="Script" path="res://scene/instruction/Operation/LogInstruction.gd" id="1_me28n"]
[ext_resource type="PackedScene" uid="uid://l3lvpw0vs5vw" path="res://scene/instruction/Base/BaseRow.tscn" id="2_vs35d"]
[ext_resource type="PackedScene" uid="uid://pnn0iyl5fuil" path="res://scene/instruction/Base/BaseLine.tscn" id="3_rqoj2"]
[ext_resource type="Script" path="res://scene/instruction/Base/ColorLabel.gd" id="4_oe7nx"]
[ext_resource type="PackedScene" uid="uid://bnxr1d310gk3l" path="res://scene/instruction/Base/BaseLineColor.tscn" id="5_ctn3b"]
[ext_resource type="PackedScene" uid="uid://cxkqo32fuxva3" path="res://scene/instruction/Base/TextInput.tscn" id="6_6wypp"]

[node name="PackColorInstruction" type="Panel"]
script = ExtResource("1_me28n")

[node name="BaseRow" parent="." instance=ExtResource("2_vs35d")]

[node name="BaseLine" parent="BaseRow" instance=ExtResource("3_rqoj2")]

[node name="ColorLabel" type="Label" parent="BaseRow/BaseLine"]
offset_right = 40.0
offset_bottom = 23.0
text = "Pack Color"
script = ExtResource("4_oe7nx")

[node name="BaseLineColor" parent="BaseRow" instance=ExtResource("5_ctn3b")]

[node name="TextInput" parent="BaseRow/BaseLineColor" instance=ExtResource("6_6wypp")]

[node name="Label" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "="
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "pack"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput2" parent="BaseRow/BaseLineColor" instance=ExtResource("6_6wypp")]

[node name="TextInput3" parent="BaseRow/BaseLineColor" instance=ExtResource("6_6wypp")]

[node name="TextInput4" parent="BaseRow/BaseLineColor" instance=ExtResource("6_6wypp")]

[node name="TextInput5" parent="BaseRow/BaseLineColor" instance=ExtResource("6_6wypp")]
